<resources>
    <string name="app_name">HelpPeopleTogether</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_news_navigation_drawer">Новости</string>
    <string name="title">Title_item</string>
    <string name="description">Информация объявления</string>
    <string name="birth_day">Выберите дату рождения</string>
    <string name="ready">Готово</string>
    <integer name="com_vk_sdk_AppId">5425061</integer>
    <string name="facebook_app_id">553314641516849</string>
    <string name="server_client_id">536185004941-35tglcricshs507svvbtjimmg6fl90r4.apps.googleusercontent.com</string>
    <string name="error_data_from_server">Ошибка, при получении данных с сервера</string>
    <string name="image_is_not_sent_to_server">Изображение не удалось отправить</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sig_in_with_help">ВОЙТИ С ПОМОЩЮ</string>
    <string name="registration">Зарегистрироваться</string>
    <string name="sign_in">Sign in</string>
    <string name="name">First name</string>
    <string name="second_name">Last name</string>
    <string name="password_registration">Password</string>
    <string name="next">Далее</string>
    <string name="theme">Тема</string>
    <string name="short_description">Краткое описание проблемы</string>
    <string name="full_description">Полное описание проблемы</string>
    <string name="money">Необходимая сумма</string>
    <string name="account">Номер расчетного счета</string>
    <string name="day_of_fee">Количество дней для сбора</string>
    <string name="post__advertisement">Разместить обьявление</string>
    <string name="day_of_birthday">Дата рождения</string>
    <string name="region">Область</string>
    <string name="city">Город</string>
    <string name="phone_number">+38 (0**) *** **-**</string>
    <string name="number">+380</string>
    <string name="facebook">Facebook</string>
    <string name="do_not_registration_from_facebook">у вас, не получилось авторизироваться через Facebook, попробуйте еще раз</string>
    <string name="do_not_registration_from_vk">у вас, не получилось авторизироваться через VK, попробуйте еще раз</string>
    <string name="not_correct_login_or_password">Не правильно введен логин или пароль</string>
    <string name="no_internet_connection">Интернет соеденение отсутствует</string>
    <string name="take_a_photo">Сделать фотографию</string>
    <string name="select_a_photo">Выбрать фотографию</string>
    <string name="cancel">Отмена</string>
    <string name="add_photo">Добавить фотографию</string>
    <string name="check_internet_connection">Проверка подключения к интернету</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="no_internet">Нет интернет соеденения</string>
    <string name="information_advertisement">Информация Обьявления</string>
    <string name="all_field_and_photo">Заполните все поля и установите изображение</string>
    <string name="all_filed">Не все поля заполнены, заполнети все поля</string>
    <string name="edit_advertisement">Редактировать объявление</string>
    <string name="sign_up">Sign up</string>
    <string name="login_busy">Логин занят</string>
    <string name="email_busy">Email занят</string>
    <string name="instal_data">Заполните все поля, и установите фото</string>
    <string name="rec">Запись</string>


</resources>
