<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/description_problem_linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawer_gradient"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/toolbar_gradient">

        <TextView
            android:id="@+id/description_problem_toolbar_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/information_advertisement"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"/>

        <LinearLayout
            android:id="@+id/description_problem_layoutBack"
            android:layout_width="80dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="false"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/description_problem__back"
                android:layout_width="24dp"
                android:layout_height="20dp"
                android:src="@drawable/icon_arrow_left"/>
        </LinearLayout>


    </RelativeLayout>


    <FrameLayout
        android:id="@+id/container1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <TextView
                android:id="@+id/description_problem_name_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="Фото для обложки новости"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <com.example.alex.helppeopletogether.SupportClasses.CustomImageView
                android:id="@+id/description_problem_image"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_below="@+id/description_problem_name_photo"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:clickable="true"
                android:src="@drawable/dest_edit_photo" />

            <TextView
                android:id="@+id/description_problem_thema_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_image"
                android:layout_marginLeft="20dp"
                android:hint="@string/theme"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/description_problem_theme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_thema_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/divider"
                android:maxLength="50"
                android:padding="5dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/description_problem_short_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_theme"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/short_description"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/description_problem_full_description_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_short_description"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/full_description"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/description_problem_full_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/description_problem_full_description_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/divider"
                android:padding="5dp"
                android:singleLine="true"/>

            <TextView
                android:id="@+id/description_problem_account_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_full_description"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/account"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <EditText
                android:id="@+id/description_problem_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_account_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/divider"
                android:inputType="number"
                android:maxLength="20"
                android:padding="5dp"
                android:singleLine="true" />

            <TextView
                android:id="@+id/description_problem_problem_date_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_account"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/day_of_fee"
                android:maxLength="10"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"/>


            <TextView
                android:id="@+id/description_problem_day"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_problem_date_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/divider"
                android:clickable="true"
                android:maxLength="10"
                android:padding="5dp"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <TextView
                android:id="@+id/description_problem_money_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_problem_day"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:hint="@string/money"
                android:textColorHint="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/need_money"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/description_problem_money_text"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/divider"
                android:orientation="horizontal">


                <EditText
                    android:id="@+id/description_problem_money"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@null"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="7"
                    android:padding="5dp"
                    android:singleLine="true"
                    android:textColorHint="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />


                <Spinner
                    android:id="@+id/description_problem_spinerstate"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:popupBackground="@drawable/spinner_background" />
            </LinearLayout>

            <Button
                android:id="@+id/description_problem_locate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/need_money"
                android:layout_gravity="center"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="@dimen/marging_text_input_edit_text"
                android:background="@drawable/edit_button"
                android:text="@string/post__advertisement"
                android:textColor="@color/white" />

            <EditText
                android:id="@+id/description_problem_short_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/description_problem_short_description_text"
                android:layout_alignStart="@+id/description_problem_short_description_text"
                android:layout_below="@+id/description_problem_short_description_text"
                android:background="@drawable/divider"
                android:maxLength="50"
                android:padding="5dp"
                android:singleLine="true"/>
        </RelativeLayout>
    </ScrollView>


</LinearLayout>






