<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayoutLogin"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/background">


    <!--<TextView-->
    <!--android:id="@+id/textView"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_centerHorizontal="true"-->
    <!--android:layout_marginTop="10dp"-->
    <!--android:text="В Х О Д"-->
    <!--android:textColor="#F8F8FF"-->
    <!--android:textSize="35dp" />-->


    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="31dp"
        android:layout_marginRight="31dp"
        android:layout_marginTop="140dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/divider"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/detail_news_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_perm_identity_white_36dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#F8F8FF">

                <EditText
                    android:id="@+id/login_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:background="@null"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:padding="9dp"
                    android:singleLine="true"
                    android:textColorHint="#F8F8FF" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>



        <LinearLayout
            android:id="@+id/line3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/line1"
            android:layout_marginTop="20dp"
            android:background="@drawable/divider">

            <ImageView
                android:id="@+id/thumb_img2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_lock_open_white_36dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="#F8F8FF">

                <EditText
                    android:id="@+id/login_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="9dp"
                    android:layout_marginTop="5dp"
                    android:background="@null"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:padding="9dp"
                    android:textColorHint="#F8F8FF" />

            </android.support.design.widget.TextInputLayout>




        </LinearLayout>






    </RelativeLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativeLayout"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_button_login"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="37dp"
            android:background="@drawable/button"
            android:gravity="center"
            android:text="@string/sign_in"
            android:textColor="#F8F8FF"
            android:textSize="15sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_button_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="17dp"
            android:text="@string/sig_in_with_help"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#F8F8FF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:id="@+id/login_seti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView6"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/login_button_facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/facebook" />

            <Button
                android:id="@+id/login_button_vk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@+id/login_button_google_plus"
                android:layout_toRightOf="@+id/login_button_google_plus"
                android:background="@drawable/vk" />

            <Button
                android:id="@+id/login_button_google_plus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginRight="5dp"
                android:layout_toEndOf="@+id/login_button_facebook"
                android:layout_toRightOf="@+id/login_button_facebook"
                android:background="@drawable/google" />
        </RelativeLayout>

        <TextView
            android:id="@+id/login_view_registration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/login_seti"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:clickable="true"
            android:padding="7dp"
            android:text="@string/registration"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#F8F8FF"
            android:textSize="20sp"
            android:textStyle="bold" />


    </RelativeLayout>


</RelativeLayout>
